version/0.15/_sources/api/ansys/additive/core/porosity/PorositySummary.rst.txt




PorositySummary
===============

.. py:class:: PorositySummary(input: PorosityInput, result: ansys.api.additive.v0.additive_domain_pb2.PorosityResult)
   :canonical: ansys.additive.core.porosity.PorositySummary




Provides a summary of a porosity simulation.












Overview
--------
.. py:currentmodule:: PorositySummary
.. tab-set::




    .. tab-item:: Properties

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~input`
            - Simulation input.
          * - :py:attr:`~relative_density`
            - Ratio of the density of the simulated sample to a completely solid






Import detail
-------------

.. code-block:: python

    from ansys.additive.core.porosity import PorositySummary


Property detail
---------------
.. py:property:: input
   :canonical: ansys.additive.core.porosity.PorositySummary.input
   :type: PorosityInput


   
   Simulation input.

   For more information, see the :class:`PorosityInput` class.















   ..
       !! processed by numpydoc !!

.. py:property:: relative_density
   :canonical: ansys.additive.core.porosity.PorositySummary.relative_density
   :type: float


   
   Ratio of the density of the simulated sample to a completely solid
   sample.
















   ..
       !! processed by numpydoc !!





